style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
:root {
    --p-c: #aca79a;
    --s-c: #82868a;
    --t-c: #1b7b9e;
    --p-f: 'Source Sans Pro', 'Source Sans 3', sans-serif;
    --t-f: 'Montserrat', sans-serif;
    /*
    Amatic SC
    Julius Sans One
    */
}

.skip-to-content-link {
    background: #fff;
    height: 30px;
    width: 128px;
    left: 50%;
    transform: translate(-50%,-50%);
    padding: 8px;
    position: absolute;
    transform: translateY(-100%);
    transition: transform 0.3s;
    color: var(--t-c);

    z-index: 99999;
}
  
.skip-to-content-link:focus {
transform: translateY(0%);
}

html, body {
    max-width: 100%;
    /* overflow-y: scroll; */
    overflow-x: hidden;
}

body {
    margin: 0;
    font-size: 20px;

    background-color: var(--s-c);
    background-image: url(assets/london.jpg);
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}

@media (prefers-color-scheme: dark) {
    body {
        background-image: url(assets/london_night.jpg);
    }
}

header {
    /* background-color: var(--t-c);
    background-image: url(assets/london.jpg); */
    background: none;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: bottom;

    min-height: 50vh;
    height: max-content;
    position: relative;
    width: 100%;
}

section {
    width: 100% !important;
    padding-bottom: 32px;
}

header .strip {
    backdrop-filter: blur(16px) saturate(180%);
    -webkit-backdrop-filter: blur(16px) saturate(180%);
    background-color: var(--s-c);
    background-color: color-mix(in srgb, var(--s-c), transparent 50%);

    position: absolute;
    top: 50%; left: 50%;
    transform: translate(-50%,-50%);
    
    width: 100%;
    height: 130px;

    display: flex;
    justify-content: space-evenly;
    align-items: center;
    align-content: center;
    flex-direction: row;
}

header .strip div {
    padding: 16px;
    line-height: 8px;
}

header .strip img {
    width: 200px;
    height: 200px;
    box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.25);
}

header .strip img.circle {
    border-radius: 100%;
}

header .strip img.squircle {
    border-radius: 8px;
}

header h1 {
    font-family: var(--t-f);
    font-weight: 700;
    color: #fff;

    line-height: 0em;
    font-size: 1.75em;

    /* letter-spacing: 0.05em; */
}

.post-nominals {
    font-family: var(--p-f);
    color: #fff;
    font-weight: 200;
    font-size: 0.5em;
}

header h2 {
    font-family: var(--p-f);
    font-weight: 200;
    color: #fff;

    line-height: 0em;
    font-size: 1.5em;
}

/* header h2::before {
    content: '';
    background-color: var(--p-c);
    display: inline-block;
    width: 48px;
    height: 18px;
    margin-right: 8px;
} */

section {
    background-color: #fff;
}

section h2 {
    font-family: var(--t-f);
    font-weight: 200;
    color: var(--s-c);
    margin-top: 0;
    padding-top: 0.83em;
    padding-left: 0;

    font-size: 1.5em;
}

section h2::before {
    content: '';
    background-color: var(--p-c);
    display: inline-block;
    width: 10vw;
    height: 18px;
    margin-right: 8px;
}

section p {
    padding-left: 32px;
    padding-right: 32px;
    width: 65%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: justify;

    line-height: 1.25em;

    font-family: var(--p-f);
    font-weight: 300;
    /* letter-spacing: 0.05em; */
    word-spacing: 0.05em;
    
    color: #000;

    font-size: 1em;
}

section li {
    padding-left: 32px;
    padding-right: 32px;
    width: 65%;
    display: list-item;
    margin-left: auto;
    margin-right: auto;

    line-height: 1.25em;

    font-family: var(--p-f);
    font-weight: 300;
    /* letter-spacing: 0.05em; */
    word-spacing: 0.05em;
    
    color: #000;

    font-size: em;
}

section + .seethrough {
    backdrop-filter: blur(8px) saturate(180%);
    -webkit-backdrop-filter: blur(8px) saturate(180%);
    background-color: var(--p-c);
    background-color: color-mix(in srgb, var(--p-c), transparent 50%);
}

section + .seethrough > h2 {
    color: #fff;
}

#expertise {
    padding-bottom: 0;
}

#expertise .cred-grid {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    align-content: center;
    flex-wrap: wrap;

    gap: 16px;
}

#expertise .cred-grid div {
    background-color: #fff;
    width: 200px;
    height: 200px;
    border-radius: 8px;
    position: relative;

    transition: 0.5s;
}

#expertise .cred-grid div svg {
    width: 24px;
    transform: translateY(3px);
    height: auto;
    fill: var(--s-c);
}

#expertise .cred-grid div p {
    padding: 0;
    margin: 0;
    width: 80%;
    text-align: left !important;
    position: absolute;
    
    top: 16px;
    left: 16px;
    
    color: var(--s-c);
    font-family: var(--p-f);
    font-weight: 300;

    /* top: 50%; */
    /* left: 50%; */
    /* transform: translate(-50%, -50%); */
}

#expertise .cred-grid div .link {
    padding: 0;
    margin: 0;
    width: 80%;
    text-align: left !important;
    position: absolute;

    display: flex;
    justify-content: flex-start;
    align-items: center;
    align-content: center;

    text-decoration: none !important;
    
    bottom: 16px;
    left: 16px;
    
    color: var(--s-c);
    font-family: var(--p-f);
    font-weight: 300;

    font-size: 0.8em;

    transition: 0.25s;
}

#expertise .cred-grid div:hover {
    transform: translateY(-4px);
    background-color: color-mix(in srgb, #fff, transparent 15%);
    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.25);
}

#expertise .cred-grid div:hover > .link {
    color: var(--s-c);

    text-decoration: underline !important;
}

#expertise .cred-grid div p .title {
    font-weight: 700;
}

.divider {
    fill: #fff;
    width: 100%;
    height: auto;
}

.testimonial {
    font-family: var(--p-f);
    font-weight: 400;
    color: var(--s-c);

    font-size: 1em;

    background-color:color-mix(in srgb, var(--p-c), transparent 75%);

    min-height: 2em;
    line-height: 2em;

    min-width: 75%;
    width: fit-content;
    padding-left: 16px;
    padding-right: 16px;
}

.testimonial.left {
    margin-left: 0;
    margin-right: auto;
    
    text-align: center;
}

.testimonial.right {
    margin-right: 0;
    margin-left: auto;

    text-align: center;
}

form {
    backdrop-filter: blur(16px) saturate(180%);
    -webkit-backdrop-filter: blur(16px) saturate(180%);
    background-color: var(--p-c);
    background-color: color-mix(in srgb, var(--p-c), transparent 75%);

    border-radius: 16px;
    width: fit-content;

    padding: 16px;

    padding-left: 32px;
    padding-right: 32px;

    margin-left: auto;
    margin-right: auto;
    display: block;
}

form input, form textarea {
    margin-left: auto;
    margin-right: auto;
    display: block;

    border: none;
    border-radius: 4px;
    resize: none;

    font-family: var(--p-f);
    padding: 8px;
}

form label {
    text-align: center;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    display: block;

    font-family: var(--t-f);
    font-weight: 600;
    color: #fff;

    line-height: 1em;
    font-size: 1.25em;
}

a.contact-link {
    background-color: var(--p-c);
    width: fit-content;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 16px;
    padding-right: 16px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-decoration: none;

    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    align-content: center;
    gap: 8px;

    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.25);

    transition: 0.5s;
}

a.contact-link:hover, a.contact-link:focus {
    transform: translateY(-4px);
    background-color: color-mix(in srgb, var(--s-c), transparent 25%);
    box-shadow: 0px 8px 5px 0px rgba(0, 0, 0, 0.25);
}

a.contact-link:active {
    background-color: color-mix(in srgb, var(--s-c), transparent 50%);
    transition: 0.25s;
}

a.contact-link.linkedin:hover, a.contact-link.linkedin:focus {
    background-color: color-mix(in srgb, #0A66C2, transparent 25%) !important;
}

a.contact-link.linkedin:active {
    background-color: color-mix(in srgb, #0A66C2, transparent 50%) !important;
}

.contact-link svg {
    fill: #fff;
    width: 32px;
    height: auto;
}

.contact-link span {
    color: #fff;
    text-decoration: none;
    font-family: var(--t-f);
    line-height: 2.5em;
    height: 2.5em;
    font-weight: 200;
}

footer {
    background-color: #fff;
    min-height: 128px;
    width: 100%;
    padding-left: 16px;
    padding-top: 16px;

    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 64px;
    align-items: flex-start;
    align-content: flex-start;
}

footer p, a {
    font-family: var(--p-f);
    font-weight: 400;
    color: #000;
    line-height: 0.5em;
    text-decoration: none !important;

    transition: 0.5s;
}

footer a:hover {
    color: var(--s-c);
    text-decoration: underline !important;
}

footer p.title {
    font-weight: 600;
}

@media (max-width: 800px) {
    header {
        position: static;
        box-sizing: content-box;
        height: 550px;
    }
    header .strip {
        flex-direction: column;
        background-color: rgba(0, 0, 0, 0);
        backdrop-filter: none;
        -webkit-backdrop-filter: none;
        text-align: center;

        box-sizing: content-box;

        height: fit-content;
        top: 0%; left: 0%;
        transform: translate(0%,0%);
    }

    header h2 {
        width: 100vw;
        
        padding-top: 8px;
        padding-bottom: 8px;
    }

    header h1 {
        width: 100vw;
        
        padding-top: 8px;
        padding-bottom: 8px;
    }

    header .name {
        backdrop-filter: blur(16px) saturate(180%);
        -webkit-backdrop-filter: blur(16px) saturate(180%);
        background-color: var(--p-c);
        background-color: color-mix(in srgb, var(--p-c), transparent 50%);
    }
    section p {
        text-align: left;
    }

    .divider.top {
        position: absolute;
        top: 0;
    }
}

@media (max-width: 700px) {
    #expertise .cred-grid {
        flex-direction: column;
        gap: 16px;
    }
}

@media (max-width: 1200px) {
    #expertise .cred-grid {
        gap: 24px;
    }
}

@media (prefers-contrast: more) {
    body {
        background-color: #000;
    }
    .divider {
        fill: none;
    }
}

@media (prefers-contrast: less) {
    body {
        background-color: var(--p-c);
    }
}

